--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,16 @@
+/* GLOBAL */
+
 body {
     background: #e5e5e5;
     color: #25282B;
-
+    
     font-family: 'Montserrat', sans-serif;
-
+    
     margin: 0;
+}
+
+body.hideScroll {
+    overflow: hidden;
 }
 
 a {
@@ -23,18 +29,50 @@ p, .description {
     letter-spacing: 0.1px;
 }
 
+.button {
+    color: white;
+    background: #ff5e84;
+    
+    width: 150px;
+    height: 40px;
+
+    font-size: 14px;
+    font-weight: bold;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+    border-radius: 8px;
+    
+    box-shadow: 0px 8px 16px rgba(255, 0, 93, 0.308);
+}
+
+.button:hover {
+    text-decoration: none;
+    border-radius: 60px 6px;
+    transition: 0.5s ease-in-out;
+}  
+
+
+
+
+
+
+/* PADRÃO */
+
 #container {
     width: 90%;
     max-width: 980px;
-
+    
     margin: 40px auto;
-
+    
     display: flex;
 }
 
 #intro {
     width: 300px;
-    margin-right: 20px;
+    margin-right: 64px;
 }
 
 #main {
@@ -67,24 +105,6 @@ button {
 button:hover {
     text-decoration: underline;
 }
-
-button.fat {
-    color: white;
-    background: #ff5e84;
-
-    width: 150px;
-    height: 40px;
-
-    border-radius: 6px;
-
-    box-shadow: 0px 8px 16px rgba(255, 0, 93, 0.308);
-}
-
-button.fat:hover {
-    text-decoration: none;
-    border-radius: 60px 6px;
-    transition: 0.5s ease-in-out;
-}   
 
 footer {
     text-align: center;
@@ -139,9 +159,9 @@ footer a {
 
     position: absolute;
     top: 0;
-
-    width: 100vw;
-    height: 160vh;
+    bottom: 0;
+    right: 0;
+    left: 0;
 
     display: flex;
     justify-content: center;
@@ -149,8 +169,12 @@ footer a {
     transition: 400ms;
 }
 
+#modal.addScroll {
+    overflow: auto;
+}
+
 #modal .content {
-    margin-top: 128px;
+    margin-top: 15%;
 
     color: white;
 }
@@ -165,7 +189,7 @@ footer a {
     width: 80%;
     max-width: 800px;
 
-    margin: 0 auto;
+    margin: 0 auto 15%;
 
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -248,13 +272,75 @@ form button {
 }
 
 form button:hover {
-    background-color: #0984e3;
-    color: white;
-
     text-decoration: none;
+    border-radius: 60px 6px;
+    transition: 0.5s ease-in-out;
 }
 
 #modal.hide {
     opacity: 0;
     visibility: hidden;
+}
+
+/* IDEIAS.HTML */
+#page-ideas #container {
+    display: block;
+}
+#page-ideas header {
+    display: flex;
+    justify-content: space-between;
+}
+
+#page-ideas nav {
+    display: flex;
+    align-items: center;
+}
+
+#page-ideas nav li {
+    list-style-type: none;
+
+    margin-right: 16px;
+}
+
+#page-ideas nav li a{
+    color: #25282B;
+}
+
+#page-ideas nav li a.button{
+    color: white;
+}
+
+#page-ideas nav li:last-child {
+    margin: 0;
+}
+
+section#title {
+    text-align: center;
+}
+
+section#title p {
+    opacity: 0.7;
+    margin: 0;
+}
+
+section#title h1 {
+    margin: 0;
+    font-size: 28px;
+}
+
+section#ideas {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+
+    gap: 20px;
+}
+
+section#ideas .idea {
+    margin: 0;
+}
+
+section#title,
+section#ideas,
+footer {
+    margin-top: 64px;
 }
